--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
-  "name": "casino_landing_page",
+  "name": "bioacademy-landing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fontsource/rowdies": "^4.5.8",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "i18next": "^22.4.9",
+    "bootstrap": "^5.3.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.1.5",
     "react-multi-carousel": "^2.8.2",
     "react-scripts": "5.0.1",
-    "react-scroll-parallax": "^3.3.2",
     "react-slider": "^2.0.4",
     "sass": "^1.58.0",
     "swiper": "^9.0.3",
-    "typescript": "^4.9.5",
+    "typescript": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -31,12 +24,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -51,6 +38,15 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "@typescript-eslint/eslint-plugin": "5.40.1",
+    "@typescript-eslint/parser": "5.40.1",
+    "eslint": "8.55.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "10.0.0"
   }
 }
