--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "ts:css": "tcm -s -c -p src/**/*.module.scss",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -53,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-simple-import-sort": "10.0.0"
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "typed-css-modules": "^0.8.1"
   }
 }
