--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "bootstrap": "^5.3.2",
+    "html-react-parser": "^5.0.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-app-rewire-alias": "^1.1.7",
@@ -19,6 +20,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.2",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
     "sass": "^1.58.0",
@@ -29,6 +31,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "svgNameTypes:create": "node scripts/generateSvgIconsTypes.js",
     "ts:css": "tcm -s -c -p src/**/*.module.scss",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
