--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@mui/styled-engine": "^5.15.0",
-    "@types/node": "^16.18.11",
+    "@types/node": "^20.10.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "bootstrap": "^5.3.2",
     "html-react-parser": "^5.0.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
@@ -59,6 +58,7 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typed-css-modules": "^0.8.1"
   }
 }
