--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
     "sass": "^1.58.0",
-    "swiper": "^9.0.3",
+    "swiper": "11.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
