--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@types/node": "^20.10.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "buffer": "^6.0.3",
+    "google-auth-library": "^9.5.0",
+    "google-spreadsheet": "^4.1.1",
     "html-react-parser": "^5.0.7",
+    "mobx": "^6.12.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
@@ -21,9 +25,11 @@
     "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
+    "rxjs": "^7.8.1",
     "sass": "^1.58.0",
     "swiper": "11.0.5",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,11 +54,13 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.40.1",
-    "bootstrap": "^5.3.2",
     "@typescript-eslint/parser": "5.40.1",
+    "bootstrap": "^5.3.2",
     "eslint": "8.55.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-react": "7.33.2",
