--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-spreadsheet": "^4.1.1",
     "html-react-parser": "^5.0.7",
     "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
