--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "rxjs": "^7.8.1",
     "sass": "^1.58.0",
     "swiper": "11.0.5",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^4.9.5",
+    "bootstrap": "^5.3.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=production react-app-rewired start",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "svgNameTypes:create": "node scripts/generateSvgIconsTypes.js",
     "ts:css": "tcm -s -c -p src/**/*.module.scss",
@@ -57,7 +59,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.40.1",
     "@typescript-eslint/parser": "5.40.1",
-    "bootstrap": "^5.3.2",
     "eslint": "8.55.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
@@ -68,7 +69,6 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
-    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typed-css-modules": "^0.8.1"
   }
 }
