--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^20.10.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "bootstrap": "^5.3.2",
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "google-auth-library": "^9.5.0",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.2",
     "react-query": "^3.39.3",
+    "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
     "rxjs": "^7.8.1",
@@ -32,7 +34,6 @@
     "swiper": "11.0.5",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^4.9.5",
-    "bootstrap": "^5.3.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
