separate metriks event

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-app-rewired": "^2.2.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.8.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.9.5",
